# 3DRVE-solver

./: .gitignore  README.md  batch_run.bat  batch_run.py  batch_solve.bat  prompt.md  pyproject.toml  run_rve.bat  run_rve_py39.bat
example/: user_RVE_analysis.json
src/rve_vam/: __init__.py  assembly.py  cli.py  config.py  fields.py  homogenization.py  macro_strain.py  materials.py  mesh.py  nonlinear.py  pbc.py  postprocess.py  progress.py  solver.py  utils.py
src/rve_vam/elements/: __init__.py  hex8.py  tet4.py
tests/: test_engineering_constants.py  test_hex8.py  test_macro_strain.py  test_materials.py  test_pbc.py  test_uniform_isotropic.py  test_vtu_output.py
