[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rve-vam"
version = "0.1.0"
description = "Finite element RVE homogenization solver using periodic boundary conditions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "meshio",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
rve-vam = "rve_vam.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
